# imgui_project_base

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  TOOLCHAIN.md  app.cpp  app.h  app.hpp  database.h  database.hpp  filelogger.hpp  global.hpp  main.cpp  postgresql.md
.github/workflows/: cmake-single-platform.yml  cmake_build.yml
App/: CMakeLists.txt  FSM.hpp  app.cpp  app.hpp  globals.hpp  iscreen.hpp  main.cpp  ui_home_screen.cpp  ui_home_screen.h  ui_screen.cpp  ui_screen.h  user.hpp
App/include/: app.hpp
Core/: CMakeLists.txt  database.cpp  database.hpp  filelogger.hpp  user.hpp
Core/include/: database.hpp
cmake/: options.cmake  toolchain.cmake
test/: CMakeLists.txt  main.cpp
